Search history memory usage improvment
Former-commit-id: 23a0a85711193578749cf464e1dd79e629267928 [formerly ce343eba771cba76c1e9038b1d2f7193084469fe]
Former-commit-id: 32d72c037ac2f8982125bbcb7286ca7c816336fb

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
+    <Compile Include="Internal\ImageHandle.cs" />
     <Compile Include="Models\CachedGalleryModel.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Category.cs" />
@@ -125,7 +126,7 @@
     <Compile Include="IncrementalLoadingCollection{T}.cs" />
     <Compile Include="Helpers\IOHelper.cs" />
     <Compile Include="ObservableObject.cs" />
-    <Compile Include="Models\CachedGalleryDb.cs" />
+    <Compile Include="Models\GalleryDb.cs" />
     <Compile Include="Models\GalleryModel.cs" />
     <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
