Search history Bold
Former-commit-id: 3dfb3fd39ccfdd1969c2dc57501e9dfba22c92a3 [formerly 2f12256dca6bf4be34f259cec628bccca1bb5882]
Former-commit-id: 9c7e60a657795299c37def46844de1bd70a5e85a

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -104,11 +104,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
-    <Compile Include="Adapters\GalleryExtension.cs" />
+    <Compile Include="Helpers\DocumentHelper.cs" />
+    <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\DataTemplateSelector.cs" />
+    <Compile Include="Controls\HighlightTextBlock.cs" />
     <Compile Include="Controls\HtmlTextBlock.cs" />
     <Compile Include="Controls\CategorySelector.xaml.cs">
       <DependentUpon>CategorySelector.xaml</DependentUpon>
