--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -104,7 +104,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
-    <Compile Include="Controls\PathPresenter.cs" />
     <Compile Include="Helpers\DocumentHelper.cs" />
     <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
@@ -305,6 +304,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EhTagTranslatorClient\EhTagTranslatorClient.csproj">
+      <Project>{7a7c3d38-128a-406d-ad3c-eec617386f14}</Project>
+      <Name>EhTagTranslatorClient</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ExClient\ExClient.csproj">
       <Project>{8875a248-ce2e-454b-9090-62ae609d7644}</Project>
       <Name>ExClient</Name>
