--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -104,6 +104,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
+    <Compile Include="Converters\ChainConverter.cs" />
+    <Compile Include="Converters\EmptyConverter.cs" />
+    <Compile Include="Converters\EnumToStringConverter.cs" />
+    <Compile Include="Converters\FormatStringConverter.cs" />
+    <Compile Include="Converters\InvertConverter.cs" />
+    <Compile Include="Converters\ObjectToBooleanConverter.cs" />
+    <Compile Include="Converters\SystemConverter.cs" />
+    <Compile Include="Converters\ValueConverterBase.cs" />
     <Compile Include="Helpers\DocumentHelper.cs" />
     <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
@@ -243,7 +251,7 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
-    <Page Include="Themes\Converters.xaml">
+    <Page Include="Converters\Converters.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -311,10 +319,6 @@
     <ProjectReference Include="..\ExClient\ExClient.csproj">
       <Project>{8875a248-ce2e-454b-9090-62ae609d7644}</Project>
       <Name>ExClient</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MathExpression\MathExpression.csproj">
-      <Project>{946bdc38-a325-4325-bc86-48f923b01dd6}</Project>
-      <Name>MathExpression</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
