GalleryView scroll, Converters
Former-commit-id: a8dc32a0c6eef4abe3a66962bdd02d402f7df500 [formerly f15559496100077d1071e9f524dc4a970695bb92]
Former-commit-id: 8c169132d204da9d35cd9466e937b84d167e296b

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Views\SplashControl.xaml.cs">
       <DependentUpon>SplashControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VisualTreeHelperEx.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
