--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -1,17 +1,9 @@
 ﻿{
   "dependencies": {
-
-    "runtime.native.System.IO.Compression": "4.1.0",
-    "runtime.win7.System.Private.Uri": {
-      "version": "4.0.1",
-      "exclude": "runtime"
-    },
-    "System.Private.Uri": "4.0.0",
-
-
-    "HtmlAgilityPack": "1.4.9.4",
+    "HtmlAgilityPack": "1.4.9.5",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.0",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "MvvmLightLibs": "5.3.0",
     "Newtonsoft.Json": "9.0.1"
   },
