--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,9 +1,11 @@
 ﻿{
   "dependencies": {
     "AsyncFriendlyStackTrace": "1.4.0",
-    "HockeySDK.UWP": "4.1.2",
+    "HockeySDK.UWP": "4.1.3",
     "ImageLib.UWP": "5.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.0",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "MvvmLight": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.3",
     "PullToRefresh.UWP": "0.3.4"
