--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>ExClient</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -115,6 +115,7 @@
     <Compile Include="Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
     <Compile Include="Internal\ImageHandle.cs" />
+    <Compile Include="Internal\RedirectFilter.cs" />
     <Compile Include="Migrations\20160717022029_MyFirstMigration.cs" />
     <Compile Include="Migrations\20160717022029_MyFirstMigration.designer.cs">
       <DependentUpon>20160717022029_MyFirstMigration.cs</DependentUpon>
