Revert "delete generated code file"
This reverts commit ce77d9a7a4d2ef7d8f697fd86975f5a4efec5061 [formerly 8485be2152dc6579e7e87eed7231977cc7162346] [formerly ecfa3a8b1ca0f3acffd8d5f255c608b776ed3ea2 [formerly 36c574f3ba770950c6e0acd1733a6e72f17ea8d8]].


Former-commit-id: 2575d2f813d356b495aa7d0fc875b8635e297e8f [formerly f9bff43a176bb481e7f8e8d64f32dccc70da17ea]
Former-commit-id: 9a8efee371c5d21336775a12d0faed3436a68cae

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -142,6 +142,11 @@
     <Compile Include="ReCaptcha.cs" />
     <Compile Include="SearchResult.cs" />
     <Compile Include="Gallery.cs" />
+    <Compile Include="Strings\Strings.cs">
+      <DependentUpon>Strings.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Tag.cs" />
     <Compile Include="TorrentInfo.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
