Bug fix for filpview crash
Former-commit-id: 9b300068608bc760e4c3fb421d9a2c4bd492faa8 [formerly df04a17c4572049f360452aed55251682b865a6b]
Former-commit-id: 7b1ad30583d3aa037e7ad6f302c2dcaa02d9d860

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -183,6 +183,8 @@
     <Compile Include="Views\ImagePage.xaml.cs">
       <DependentUpon>ImagePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ImagePageCollectionView.cs" />
+    <Compile Include="Views\IImagePageImageView.cs" />
     <Compile Include="Views\RootController.cs" />
     <Compile Include="Views\LogOnDialog.xaml.cs">
       <DependentUpon>LogOnDialog.xaml</DependentUpon>
