--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "HockeySDK.UWP": "4.1.3",
     "ImageLib.UWP": "5.0.0",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "JyAnalytics": "1.0.10",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "MvvmLight": "5.3.0",
