bug fix; rename settings
Former-commit-id: b345246f8610ea5bc4c91ec21860758120099522 [formerly bbfc9ee68da60fea4c76b7bc8a9101bab4cc5634]
Former-commit-id: 9e86f0194de042c6e37c6a05f69ba0ff8a82ab0b

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -156,7 +156,7 @@
     <Compile Include="Settings\GroupedSettings.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingInfo.cs" />
-    <Compile Include="Settings\SettingCollectionBase.cs" />
+    <Compile Include="Settings\ApplicationSettingCollection.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
     <Compile Include="Settings\StatusCollection.cs" />
     <Compile Include="Strings\Strings.cs">
