--- a/ExViewer/App.config
+++ b/ExViewer/App.config
@@ -1,4 +1,4 @@
-﻿<configuration>
+﻿<!--<configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -17,4 +17,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+</configuration>-->
