rename cached gallery
Former-commit-id: 03e1b5d512309d040567a33867de6ce5425fe256 [formerly f65790e44cddd1c0b0bf47d029096c0577faa2e9]
Former-commit-id: ad508eb2343a4bcd93360bee473ebbdd310c9280

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -112,7 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedSearchOptions.cs" />
-    <Compile Include="CachedGallery.cs" />
+    <Compile Include="SavedGallery.cs" />
     <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
@@ -124,7 +124,7 @@
       <DependentUpon>20160717022029_MyFirstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\GalleryDbModelSnapshot.cs" />
-    <Compile Include="Models\CachedGalleryModel.cs" />
+    <Compile Include="Models\SavedGalleryModel.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="Client.cs" />
