--- a/EhWikiClient/EhWikiClient.csproj
+++ b/EhWikiClient/EhWikiClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8875A248-CE2E-454B-9090-62AE609D7644}</ProjectGuid>
+    <ProjectGuid>{11B1903E-AF00-4D7C-90D4-02E4EA20A96E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExClient</RootNamespace>
-    <AssemblyName>ExClient</AssemblyName>
+    <RootNamespace>EhWikiClient</RootNamespace>
+    <AssemblyName>EhWikiClient</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
@@ -35,6 +35,28 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <NoWarn>;2008</NoWarn>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
+    <Optimize>true</Optimize>
+    <NoWarn>;2008</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <PlatformTarget>ARM</PlatformTarget>
@@ -80,90 +102,15 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <Optimize>true</Optimize>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
-    <PRIResource Include="Strings\zh-cn\NameSpace.resw" />
-    <PRIResource Include="Strings\zh-cn\Category.resw" />
-    <PRIResource Include="Strings\zh-cn\Resources.resw" />
-    <PRIResource Include="Strings\en\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvancedSearchOptions.cs" />
-    <Compile Include="CachedGallery.cs" />
-    <Compile Include="GalleryImagePlaceHolder.cs" />
-    <Compile Include="Helpers\MathHelper.cs" />
-    <Compile Include="GalleryList.cs" />
-    <Compile Include="SavedGallery.cs" />
-    <Compile Include="Client-Forum.cs" />
-    <Compile Include="Comment.cs" />
-    <Compile Include="Helpers\HtmlHelper.cs" />
-    <Compile Include="Internal\ImageHandle.cs" />
-    <Compile Include="Internal\MyHttpClient.cs" />
-    <Compile Include="Internal\RedirectFilter.cs" />
-    <Compile Include="Migrations\20160717022029_MyFirstMigration.cs" />
-    <Compile Include="Migrations\20160717022029_MyFirstMigration.designer.cs">
-      <DependentUpon>20160717022029_MyFirstMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\GalleryDbModelSnapshot.cs" />
-    <Compile Include="Models\SavedGalleryModel.cs" />
-    <Compile Include="Helpers\StorageHelper.cs" />
-    <Compile Include="Category.cs" />
     <Compile Include="Client.cs" />
-    <Compile Include="Helpers\ConnectionHelper.cs" />
-    <Compile Include="DictionaryExtention.cs" />
-    <Compile Include="GalleryImage.cs" />
-    <Compile Include="HahProxyConfig.cs" />
-    <Compile Include="IncrementalLoadingCollection{T}.cs" />
-    <Compile Include="Helpers\IOHelper.cs" />
-    <Compile Include="ObservableObject.cs" />
-    <Compile Include="Models\GalleryDb.cs" />
-    <Compile Include="Models\GalleryModel.cs" />
-    <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Client-Search.cs" />
-    <Compile Include="ReCaptcha.cs" />
-    <Compile Include="SearchResult.cs" />
-    <Compile Include="Gallery.cs" />
-    <Compile Include="Strings\Strings.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Strings.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Tag.cs" />
-    <Compile Include="TorrentInfo.cs" />
-    <Content Include="Properties\ExClient.rd.xml" />
-    <PRIResource Include="Strings\en\NameSpace.resw" />
-    <PRIResource Include="Strings\en\Category.resw" />
-    <None Include="Strings\Strings.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Strings.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Compile Include="Record.cs" />
+    <EmbeddedResource Include="Properties\EhWikiClient.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
