japanese in time
Former-commit-id: d1831ba0288280f5dd3ecae617b2c130dbe4f2d0 [formerly a4ce21889513292f5e666de2b14ac65c76f35739]
Former-commit-id: 99a9a237a969cdc8704a101131d19b43db259e9b

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Converters\ValueConverter.cs" />
     <Compile Include="Converters\ValueConverterBase.cs" />
     <Compile Include="Helpers\ApiInfo.cs" />
+    <Compile Include="Helpers\Box{T}.cs" />
     <Compile Include="Helpers\DocumentHelper.cs" />
     <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
