About page; bug fix

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -115,7 +115,7 @@
     <Compile Include="CachedGallery.cs" />
     <Compile Include="GalleryImagePlaceHolder.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
-    <Compile Include="GalleryList.cs" />
+    <Compile Include="GalleryList{T}.cs" />
     <Compile Include="SavedGallery.cs" />
     <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
