--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -107,6 +107,10 @@
     </PRIResource>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ExcludedLanguagesSelector.xaml.cs">
+      <DependentUpon>ExcludedLanguagesSelector.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TagPresenter.cs" />
     <Compile Include="Converters\EmptyConverter.cs" />
     <Compile Include="Helpers\AccountManager.cs" />
     <Compile Include="Converters\ByteSizeToStringConverter.cs" />
@@ -124,7 +128,7 @@
     <Compile Include="Converters\ValueConverter.cs" />
     <Compile Include="Converters\ValueConverterBase.cs" />
     <Compile Include="Helpers\ApiInfo.cs" />
-    <Compile Include="Helpers\Box{T}.cs" />
+    <Compile Include="Helpers\AsyncWarpper.cs" />
     <Compile Include="Helpers\DocumentHelper.cs" />
     <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
@@ -276,6 +280,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="Controls\CategorySelector.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ExcludedLanguagesSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
