--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,13 +1,12 @@
 ﻿{
   "dependencies": {
     "HockeySDK.UWP": "4.1.5",
-    "ImageLib.UWP": "5.2.0",
     "JyAnalytics": "1.0.10",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.1.0",
     "MvvmLight": "5.3.0",
-    "PlatformSpecific.Analyzer": "2.0.3",
-    "PullToRefresh.UWP": "0.3.4"
+    "PlatformSpecific.Analyzer": "2.0.3"
   },
   "frameworks": {
     "uap10.0": {}
