--- a/BannerProvider/project.json
+++ b/BannerProvider/project.json
@@ -1,10 +1,7 @@
 ﻿{
   "dependencies": {
-    "HtmlAgilityPack": "1.4.9.5",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "MvvmLightLibs": "5.3.0",
-    "Newtonsoft.Json": "9.0.1"
+    "MvvmLightLibs": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
@@ -12,9 +9,9 @@
   "runtimes": {
     "win10-arm": {},
     "win10-arm-aot": {},
-    "win10-x64": {},
-    "win10-x64-aot": {},
     "win10-x86": {},
-    "win10-x86-aot": {}
+    "win10-x86-aot": {},
+    "win10-x64": {},
+    "win10-x64-aot": {}
   }
 }
