--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,10 +1,10 @@
 ﻿{
   "dependencies": {
-    "HockeySDK.UWP": "4.1.5",
+    "HockeySDK.UWP": "4.1.6",
     "JyAnalytics": "1.0.10",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0-preview1-final",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "1.1.0",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
     "MvvmLight": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.3"
   },
